Fix vertical text alignment in full width Button

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -252,7 +252,7 @@ $spinner-size: rem(20px);
 }
 
 .fullWidth {
-  display: block;
+  display: flex;
   width: 100%;
 }
 
